samples/_failures_safe/1761304285_51b64d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e379c20a.c: In function ‘main’:
./samples/SAFE/__tmp_e379c20a.c:155:53: error: expected ‘)’ at end of input
  155 |     decompressed.size = simple_decompress(compressed
      |                                          ~          ^
      |                                                     )
./samples/SAFE/__tmp_e379c20a.c:155:43: error: incompatible type for argument 1 of ‘simple_decompress’
  155 |     decompressed.size = simple_decompress(compressed
      |                                           ^~~~~~~~~~
      |                                           |
      |                                           Buffer
./samples/SAFE/__tmp_e379c20a.c:57:41: note: expected ‘const uint8_t *’ {aka ‘const unsigned char *’} but argument is of type ‘Buffer’
   57 | size_t simple_decompress(const uint8_t *input, size_t input_size, uint8_t *output, size_t output_size) {
      |                          ~~~~~~~~~~~~~~~^~~~~
./samples/SAFE/__tmp_e379c20a.c:155:25: error: too few arguments to function ‘simple_decompress’
  155 |     decompressed.size = simple_decompress(compressed
      |                         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e379c20a.c:57:8: note: declared here
   57 | size_t simple_decompress(const uint8_t *input, size_t input_size, uint8_t *output, size_t output_size) {
      |        ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e379c20a.c:155:5: error: expected declaration or statement at end of input
  155 |     decompressed.size = simple_decompress(compressed
      |     ^~~~~~~~~~~~
